--- a/annotations/.classpath
+++ b/annotations/.classpath
@@ -2,6 +2,8 @@
 <classpath>
 	<classpathentry kind="src" path="src/main/java"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<!-- <classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/3"/> -->
+	<classpathentry exported="true" kind="lib" path="libs/easymock-3.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/guava-15.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/kxml2-2.3.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
